...
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Text your word here" id="XxZ-5Z-yHk">
                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <animations/>
                            <textInputTraits key="textInputTraits"/>
                            <scopeButtonTitles>
                                <string>Title</string>
                                <string>Title</string>
                            </scopeButtonTitles>
                            <connections>
                                <outlet property="delegate" destination="q8b-6b-Bls" id="O5k-dn-dHj"/>
                            </connections>
                        </searchBar>
...
                                        <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DHe-VZ-DGL" id="M0l-cW-zcg">
                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IvO-Gn-onQ">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <animations/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o6E-YI-NA1">
                                <rect key="frame" x="140" y="210" width="42" height="30"/>
                                <animations/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="logIn" destination="OSl-I3-bYO" eventType="touchUpInside" id="pin-8r-VUi"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MBO-so-hvh">
                                <rect key="frame" x="134" y="269" width="55" height="30"/>
                                <animations/>
                                <state key="normal" title="Sign Up"/>
                                <connections>
                                    <action selector="signUp" destination="OSl-I3-bYO" eventType="touchUpInside" id="y2c-1x-f0M"/>
                                </connections>
                            </button>
                        </subviews>
                        <animations/>
...
