...
    
    override func awakeFromInsert() {
        super.awakeFromInsert()
        
        let dynamicCourse = Course(withContext: self.managedObjectContext!)
        dynamicCourse.type = Course.CourseType.Dynamic.rawValue
        dynamicCourse.name = "Words added by you"
        dynamicCourse.isActive = true
        dynamicCourse.language = self
    }
    
    func activeCourses() -> NSSet {
        return self.courses.filteredSetUsingPredicate(NSPredicate(format: "isActive == YES"))
...
